prodMetadata/src/objects/Contact_PolRec_junction__c.object
<CustomObject>
    <description>Junction object to connect Policy Recommendation records and Contact records.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The Policy Priority is related to which Contact?</description>
        <inlineHelpText>The Policy Priority is related to which Contact?</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contacts_related_to_PP</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Policy_Rec__c</fullName>
        <description>Link the contact to which Policy Recommendation record?</description>
        <inlineHelpText>Link the contact to which Policy Recommendation record?</inlineHelpText>
        <label>Policy Recommendation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Policy_Rec__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Policy_Rec__c</referenceTo>
        <relationshipLabel>Contacts related to this Recommendation</relationshipLabel>
        <relationshipName>Pol_Rec_related_to_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>What is the contact&apos;s position in regards to the Policy Priority?</description>
        <inlineHelpText>What is the contact&apos;s position in regards to the Policy Priority?</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Key Ally</fullName>
                </value>
                <value>
                    <fullName>Supportive</fullName>
                </value>
                <value>
                    <fullName>Opposed</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact related to Policy Rec</label>
    <nameField>
        <displayFormat>PR-Cont-{000000}</displayFormat>
        <label>PolRec Contact Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts related to Policy Rec</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>